RG-2417 add negative margin to dropdown icon to prevent breaking alignment [publish]

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -340,6 +340,7 @@
   transition: color var(--ring-ease);
 
   .block & {
+    margin-top: -1px;
     margin-right: calc(var(--ring-unit) * -0.5);
 
     color: var(--ring-icon-secondary-color);
